[package]
name = "rust-uniswap-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3.14"
tokio = "1.21.2"
web3 = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
#num-bigint = "0.4"
#num-traits = "0.2"
bigdecimal = "0.4.5"
toml = "0.8.19"
log = "0.4.21"

[dev-dependencies]
mockall = "0.13.0"
mockall_derive = "0.13.0"